EUTE4-283:Add get request to search for organizations with capabilities
Approved-by: Sotiria Antaranian (ATC)